--- a/css/style.css
+++ b/css/style.css
@@ -245,6 +245,12 @@ img {
 #reported{
    display: none; 
 }
+#like{
+  display: none;
+}
+#report{
+  display: none;
+}
 
 @media only screen and (max-width: 992px) {
   #posts {
